--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <p><br></p>
 <!-- Credit -->
 <div id="credit-text">
-    <p style="text-align: center">Made By <a id="link-footer" href="https://www.behance.net/danarandco"><b>Danar&Co.</b></a</p>
+    <p style="text-align: center">Made By <a id="link-footer" href="https://www.behance.net/danarandco"><b>Danar&Co.</b> 2023</a</p>
 </div>
 </div>
 <p><br></p>
